# discord_voice_to_text

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  LINUX_SETUP.md  README.md  debug_audio.py  deploy.sh  docker-compose.yml  main.py  pyproject.toml
src/: context_manager.py  keyword_extractor.py  llm_providers.py  minutes_generator.py  sentiment_analyzer.py  speaker_analyzer.py  text_postprocessor.py  transcriber.py  voice_recorder.py
tests/: test_llm_providers.py  test_minutes_generator.py  test_transcriber.py  test_voice_recorder.py
