[project]
name = "discord-voice-to-text"
version = "0.1.0"
description = "Discord音声文字起こしBot"
authors = [
    {name = "Author", email = "author@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "py-cord>=2.4.0",
    "openai>=1.3.0",
    "google-generativeai>=0.3.0",
    "python-dotenv>=1.0.0",
    "pydub>=0.25.1",
    "PyNaCl>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]